--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.6.0",
     "jest-expo": "^22.0.0",
+    "react-native-scripts": "1.6.0",
     "react-test-renderer": "16.0.0-beta.5"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
@@ -19,8 +19,16 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-eslint": "^8.0.1",
+    "babel-preset-airbnb": "^2.4.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "expo": "^22.0.0",
     "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5"
+    "react-native": "^0.49.5",
+    "react-navigation": "^1.0.0-beta.15"
   }
 }
