--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
     "expo": "^22.0.0",
+    "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
     "react-navigation": "^1.0.0-beta.15"
