--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,7 @@
     "react/jsx-filename-extension": ["off"],
     "import/extensions": ["off"],
     "react/prop-types": ["off"],
+    "react/no-did-mount-set-state": ["off"],
     "key-spacing": ["error", { "mode": "minimum" }],
     "no-multi-spaces": ["error", {
       "exceptions": {
