--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "babel-eslint": "^8.0.1",
     "babel-preset-airbnb": "^2.4.0",
     "eslint": "^4.10.0",
